# mypy-setattr

./: .gitignore  .tagpr  AGENTS.md  CHANGELOG.md  README.md  channels.scm  guix-shell.sh  guix-time-machine-shell.sh  manifest.scm  pyproject.toml
.github/workflows/: ci.yml  tagpr.yml
scripts/: format-dry-run.sh  format.sh  test.sh  typecheck.sh
src/mypy_setattr/: __init__.py  plugin.py  test_plugin.py
